--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,25 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+# call api
+# get location from user
+# if invalid city/zip alert user and prompt for re-entry
+# if valid format url to user location
+# get unformatted weather data from site
+# access dictionaries to display weather and temperature
+# reformat json data for readability
+# convert temperature from kelvin to fahrenheit
+# display current weather to user and allow them to run again
 
-# C extensions
-*.so
+import requests
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+api_address = 'http://api.openweathermap.org/data/2.5/weather?appid=ec2d63869466219c12fe44045a6efdd1&q='
+location = input("Please enter your city or zip code: ")
+final_url = api_address + location
+unformatted_data = requests.get(final_url).json()
+weather = unformatted_data["weather"][0]["main"]
+kelvin = unformatted_data["main"]["temp"]
+temperature = (float(kelvin) * 1.8) - 459.67
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+print("Sky conditions are currently: ", weather,",and the temperature is ", temperature,"degrees fahrenheit.")
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+def kelvin_to_fahrenheit(farenheit):
+    farenheit = (float(kelvin) * 1.8) - 459.67
+    return farenheit
